--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
         <img class="selfPhoto" src="images/me.jpg" alt="A picture of Dane">
     </div>
     <ul class="navigation">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href=personal.html>About</a></li>
+        <li><a href=experience.html>Experience</a></li>
+        <li><a href=projects.html>Projects</a></li>
+        <li><a href=resume.html>Resume</a></li>
     </ul>
     <ul class="contact">
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+        <li><a href="mailto:danew49@gmail.com">Email</a></li>
+        <li>Github</li>
     </ul>
+    <p class="slogan">Now with 200% more dark mode!</p>
 
 </body>
 </html>
