--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Dane Wrye</title>
-    <meta name="author" content="Dane Wrye">
-    <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
-    <link href="styles/index.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <div class="centered">
-        <img class="selfPhoto" src="images/me.jpg" alt="A picture of Dane">
-    </div>
-    <ul class="navigation">
-        <li><a href=personal.html>About</a></li>
-        <li><a href=experience.html>Experience</a></li>
-        <li><a href=projects.html>Projects</a></li>
-        <li><a href=resume.html>Resume</a></li>
-    </ul>
-    <ul class="contact">
-        <li><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
-        <li><a href="mailto:danew49@gmail.com">Email</a></li>
-        <li>Github</li>
-    </ul>
-    <p class="slogan">Now with 200% more dark mode!</p>
-
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Dane Wrye</title>
+        <meta name="author" content="Dane Wrye">
+        <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
+        <link href="styles/index.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    </head>
+    <body>
+        <section>
+            <h1 class=>Hello, World!</h1>
+            <img class="selfPhoto" src="images/me.jpg" alt="A picture of Dane">
+            <ul class="navigation">
+                <li><a href=personal.html>About</a></li>
+                <li><a href=experience.html>Experience</a></li>
+                <li><a href=projects.html>Projects</a></li>
+                <li><a href=resume.html>Resume</a></li>
+            </ul>
+            <ul class="contact">
+                <li class="social"><a href="https://www.linkedin.com/in/danewrye/"><img src="images/github.svg" alt="github"></a></li>
+                <li class="social"><a href="https://www.linkedin.com/in/danewrye/"><img src="images/linkedin.svg" alt="linkedin"></a></li>
+                <li class="social"><a href="mailto:danew49@gmail.com"><img src="images/gmail.svg" alt="gmail"></a></li>
+            </ul>
+        </section>
+    </body>
 </html>
