--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <h1 class=>Hello, World!</h1>
             <img class="selfPhoto" src="images/me.jpg" alt="A picture of Dane">
             <ul class="navigation">
-                <li><a href=personal.html>About</a></li>
-                <li><a href=experience.html>Experience</a></li>
-                <li><a href=projects.html>Projects</a></li>
-                <li><a href=resume.html>Resume</a></li>
+                <li class="nav"><a href=personal.html>About</a></li>
+                <li class="nav"><a href=experience.html>Experience</a></li>
+                <li class="nav"><a href=projects.html>Projects</a></li>
+                <li class="nav"><a href=resume.html>Resume</a></li>
             </ul>
             <ul class="contact">
-                <li class="social"><a href="https://www.linkedin.com/in/danewrye/"><img src="images/github.svg" alt="github"></a></li>
+                <li class="social"><a href="https://github.com/danewrye"><img src="images/github.svg" alt="github"></a></li>
                 <li class="social"><a href="https://www.linkedin.com/in/danewrye/"><img src="images/linkedin.svg" alt="linkedin"></a></li>
                 <li class="social"><a href="mailto:danew49@gmail.com"><img src="images/gmail.svg" alt="gmail"></a></li>
             </ul>
