--- a/about.html
+++ b/about.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Dane Wrye</title>
-    <meta name="author" content="Dane Wrye">
-    <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  </head>
-  <header>
-        <div class="mini1">
-            <p class="headertext"><a href=index.html>Home</a></p>
-        </div>
-        <div class="mini2">
-            <p class="headertext"><a href=experience.html>Experience</a></p>
-        </div>
-        <div class="mainpic">
-            <img class="me" src="images/me.jpg" alt="Picture of Dane" border="1">
-        </div>
-        <div class="mini3">
-            <p class="headertext"><a href=projects.html>Projects</a></p>
-        </div>
-        <div class="curr4">
-            <p class="headertext"><a href=personal.html>About</a></p>
-        </div>
-    </header>
-  <body>
-    <p>This page is about myself</p>
-  </body>
-</html>
+    <head>
+        <meta charset="utf-8">
+        <title>Dane Wrye</title>
+        <meta name="author" content="Dane Wrye">
+        <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
+        <link href="styles/style.css" rel="stylesheet">
+        <script src="scripts/about.js" defer></script>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <img class="mountains" src="images/mountains.png" alt="Mountain range image">
+            <ul class="navigation">
+                <li class="selected"><a href=about.html>About</a></li>
+                <li><a href=experience.html>Experience</a></li>
+                <li><a href=projects.html>Projects</a></li>
+                <li><a href=index.html>Landing</a></li>
+            </ul>
+        </header>
+        <section>
+            <h3>Biography</h3>
+            <p class="general">Hello again! My name is Dane Wrye. I'm a computer science major at the Georgia Institute of technology, where I will be heading into my junior year! I'm from Reno, Nevada, and I like to think the vastness of the desert has instilled a . That it was a part of what drove me to computer science. </p>
+            <p class="cs">Because computer science because it puts the raw ability to create in your hands. And the combination of ability and imagination is a deadly one.</p>
+            <p class="self">While I love computer science (i did major in it, after all!) there's plenty more to me beyond the screens and whiteboards. And they don't have to be mutually exculusive: working at the intersection of my academic and perosnal interests always gives me a great deal of pleasure.</p>
+            <h3>Slides</h3>
+            <div class="slideshowDiv">
+                <img class="slide" alt="Selected images of hobbies">
+            </div>
+        </section>
+    </body>
