--- a/experience.html
+++ b/experience.html
@@ -1,31 +1,59 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Dane Wrye</title>
-    <meta name="author" content="Dane Wrye">
-    <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-        <div class="mini1">
-            <p class="headertext"><a href=index.html>Home</a></p>
-        </div>
-        <div class="curr2">
-            <p class="headertext"><a href=experience.html>Experience</a></p>
-        </div>
-        <div class="mainpic">
-            <img class="me" src="images/me.jpg" alt="Picture of Dane" border="1">
-        </div>
-        <div class="mini3">
-            <p class="headertext"><a href=projects.html>Projects</a></p>
-        </div>
-        <div class="mini4">
-            <p class="headertext"><a href=personal.html>About</a></p>
-        </div>
-    </header>
-    <p>This page is about my experience</p>
-  </body>
-</html>
+    <head>
+        <meta charset="utf-8">
+        <title>Dane Wrye</title>
+        <meta name="author" content="Dane Wrye">
+        <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
+        <link href="styles/style.css" rel="stylesheet">
+        <script src="scripts/experience.js" defer></script>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <img class="mountains" src="images/mountains.png" alt="Mountain range image">
+            <ul class="navigation">
+                <li><a href=about.html>About</a></li>
+                <li class="selected"><a href=experience.html>Experience</a></li>
+                <li><a href=projects.html>Projects</a></li>
+                <li><a href=index.html>Landing</a></li>
+            </ul>
+        </header>
+        <section>
+            <h3>Professional</h3>
+            <div class="expCard even">
+                <img class="logo" src="images/lm.jpg">
+                <p class=workplace>Lockheed Martin</p>
+                <p class=location>Fort Worth, Tx</p>
+                <p class=title>Software Engineering Intern</p>
+                <p class=date>05/2020-07/2020</p>
+                <p class=description>Worked at lockheed</p>
+            </div>
+            <div class="expCard odd">
+                <img class="logo" src="images/rehearsal.png">
+                <p class=workplace>Rehearsal</p>
+                <p class=location>Reno, Nv</p>
+                <p class=title>Software Engineering Intern</p>
+                <p class=date>05/2019-08/2019</p>
+                <p class=description>Worked at Rehearsal</p>
+            </div>
+            <h3>Community</h3>
+            <div class="expCard even">
+                <img class="logo" src="images/hive.png">
+                <p class=workplace>The Hive Makerspace</p>
+                <p class=location>Atlanta, Ga</p>
+                <p class=title>Director of Outreach</p>
+                <p class=date>06/2019-Current</p>
+                <p class=description>Director of outreach at The Hive</p>
+            </div>
+            <div class="expCard odd">
+                <img class="logo" src="images/hive.png">
+                <p class=workplace>The Hive Makerspace</p>
+                <p class=location>Atlanta, Ga</p>
+                <p class=title>Peer Instructor</p>
+                <p class=date>02/2019-Current</p>
+                <p class=description>Peer Instructor at The Hive</p>
+            </div>
+
+        </section>
+    </body>
