--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
             <h1 class=>Hello, World!</h1>
             <img class="selfPhoto" src="images/me.jpg" alt="A picture of Dane">
             <ul class="navigation">
-                <li class="nav"><a href=personal.html>About</a></li>
+                <li class="nav"><a href=about.html>About</a></li>
                 <li class="nav"><a href=experience.html>Experience</a></li>
                 <li class="nav"><a href=projects.html>Projects</a></li>
-                <li class="nav"><a href=resume.html>Resume</a></li>
             </ul>
             <ul class="contact">
                 <li class="social"><a href="https://github.com/danewrye"><img src="images/github.svg" alt="github"></a></li>
