--- a/projects.html
+++ b/projects.html
@@ -1,31 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="utf-8">
-    <title>Dane Wrye</title>
-    <meta name="author" content="Dane Wrye">
-    <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  </head>
-  <header>
-        <div class="mini1">
-            <p class="headertext"><a href=index.html>Home</a></p>
-        </div>
-        <div class="mini2">
-            <p class="headertext"><a href=experience.html>Experience</a></p>
-        </div>
-        <div class="mainpic">
-            <img class="me" src="images/me.jpg" alt="Picture of Dane" border="1">
-        </div>
-        <div class="curr3">
-            <p class="headertext"><a href=projects.html>Projects</a></p>
-        </div>
-        <div class="mini4">
-            <p class="headertext"><a href=personal.html>About</a></p>
-        </div>
-    </header>
-  <body>
-    <p>This page is about my projects</p>
-  </body>
-</html>
+    <head>
+        <meta charset="utf-8">
+        <title>Dane Wrye</title>
+        <meta name="author" content="Dane Wrye">
+        <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
+        <link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    </head>
+    <body>
+        <header>
+            <img class="mountains" src="images/mountains.png" alt="Mountain range image">
+            <ul class="navigation">
+                <li><a href=about.html>About</a></li>
+                <li><a href=experience.html>Experience</a></li>
+                <li class="selected"><a href=projects.html>Projects</a></li>
+                <li><a href=index.html>Landing</a></li>
+            </ul>
+        </header>
+        <section>
+        </section>
+    </body>
