Finished slideshow, added footer, refined about and experience pages

--- a/about.html
+++ b/about.html
@@ -21,12 +21,29 @@
         </header>
         <section>
             <h3>Biography</h3>
-            <p class="general">Hello again! My name is Dane Wrye. I'm a computer science major at the Georgia Institute of technology, where I will be heading into my junior year! I'm from Reno, Nevada, and I like to think the vastness of the desert has instilled a . That it was a part of what drove me to computer science. </p>
-            <p class="cs">Because computer science because it puts the raw ability to create in your hands. And the combination of ability and imagination is a deadly one.</p>
-            <p class="self">While I love computer science (i did major in it, after all!) there's plenty more to me beyond the screens and whiteboards. And they don't have to be mutually exculusive: working at the intersection of my academic and perosnal interests always gives me a great deal of pleasure.</p>
-            <h3>Slides</h3>
-            <div class="slideshowDiv">
-                <img class="slide" alt="Selected images of hobbies">
+            <p class="bio">Hello again! My name is Dane Wrye. I'm currently looking for a Summer 2021 internship within computer science and software engineering- if you have any interest, please contact me! With that out of the way, let me continue: I'm a computer science major from Reno, Nevada, and I study at the Georgia Institute of Technology, where I will be heading into my junior year!</p>
+            <p class="bio">Within computer science, I have many interests. I'm fascinated by artificial intelligence, math, embedded computing, and internet of things, among others. I absolutely love to create: I spend lots of my time helping run The Hive, an ECE makerspace, and working on personal projects at the intersection of computer science and my personal interests. Things like scuba diving, backpacking, travel, language learning, football, lacrosse, coaching, lifting, and reading.</p>
+            <p class="bio">If you have a little more time, and want to get to know me a little bit better, check out the slideshow below!</p>
+            <div class="slideShowContainer">
+                <div class="slideshowDiv">
+                    <img class="slide" alt="Selected images of hobbies">
+                </div>
+                <div class="slideshowDescription">
+                    <p class="descriptionTitle"></p>
+                    <p class="description"></p>
+                    <button class="previous">Previous</button>
+                    <button class="next">Next</button>
+                </div>
             </div>
         </section>
+        <footer class=footerContact>
+            <ul>
+                <li class="social"><a href="https://github.com/danewrye">Github</a></li>
+                <li class="social"><a>|</a></li>
+                <li class="social"><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+                <li class="social"><a>|</a></li>
+                <li class="social"><a href="mailto:danew49@gmail.com">Email</a></li>
+            </ul>
+        </footer>
     </body>
+</html>
