--- a/experience.html
+++ b/experience.html
@@ -19,41 +19,51 @@
                 <li><a href=index.html>Landing</a></li>
             </ul>
         </header>
+        <p class="hmu"> Is your company name missing from this section? Don't be a stranger! Reach out!</p>
         <section>
             <h3>Professional</h3>
             <div class="expCard even">
                 <img class="logo" src="images/lm.jpg">
                 <p class=workplace>Lockheed Martin</p>
-                <p class=location>Fort Worth, Tx</p>
+                <p class=location>Fort Worth, TX</p>
                 <p class=title>Software Engineering Intern</p>
                 <p class=date>05/2020-07/2020</p>
-                <p class=description>Worked at lockheed</p>
+                <p class=description><br>Delivered new software features in an agile environment. Contributed to build of CI/CD pipeline with Jenkins and Groovy. Helped redisign architecture of aforementioned Jenkins pipeline to increase modularity. Created various automation scripts with Python, Perl, and Batch: saved approximately 8-10 hours a week.</p>
             </div>
             <div class="expCard odd">
                 <img class="logo" src="images/rehearsal.png">
                 <p class=workplace>Rehearsal</p>
-                <p class=location>Reno, Nv</p>
+                <p class=location>Reno, NV</p>
                 <p class=title>Software Engineering Intern</p>
                 <p class=date>05/2019-08/2019</p>
-                <p class=description>Worked at Rehearsal</p>
+                <p class=description><br>Automated regression testing suite using Java and Selenium WebDriver, saving around 6 hours per test suite run. Created new tests with JUnit to expand coverage, catching new bugs.</p>
             </div>
             <h3>Community</h3>
             <div class="expCard even">
                 <img class="logo" src="images/hive.png">
                 <p class=workplace>The Hive Makerspace</p>
-                <p class=location>Atlanta, Ga</p>
+                <p class=location>Atlanta, GA</p>
                 <p class=title>Director of Outreach</p>
                 <p class=date>06/2019-Current</p>
-                <p class=description>Director of outreach at The Hive</p>
+                <p class=description><br>Directly oversee The Hive's outreach committee, leading discussion and formation of policy and events. Work with community K-12 educators to deliver informational talks and workshops. Spearhead joint makerspace efforts on Georgia Tech campus. Act as a liason between The Hive and corporate sponsors to bring events to the Georgia Tech.</p>
             </div>
             <div class="expCard odd">
                 <img class="logo" src="images/hive.png">
                 <p class=workplace>The Hive Makerspace</p>
-                <p class=location>Atlanta, Ga</p>
+                <p class=location>Atlanta, GA</p>
                 <p class=title>Peer Instructor</p>
                 <p class=date>02/2019-Current</p>
-                <p class=description>Peer Instructor at The Hive</p>
+                <p class=description><br>Tutor guests on the use of The Hive's machines and technologies, including but certaintly not limited to 3d printing, laser cutting, and microcontrollers. Advise and guide guests on the creation of their own personal projects. </p>
             </div>
-
         </section>
+        <footer class=footerContact>
+            <ul>
+                <li class="social"><a href="https://github.com/danewrye">Github</a></li>
+                <li class="social"><a>|</a></li>
+                <li class="social"><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+                <li class="social"><a>|</a></li>
+                <li class="social"><a href="mailto:danew49@gmail.com">Email</a></li>
+            </ul>
+        </footer>
     </body>
+</html>
