--- a/projects.html
+++ b/projects.html
@@ -19,5 +19,28 @@
             </ul>
         </header>
         <section>
+          <div class="projectCard">
+            <div class="projectImage">
+              <img src="images/rehearsal.png">
+            </div>
+            <div class="projectDescription">
+              <p class="projectTitle">Project 1</p>
+              <p class="projectDescription">Description 1</p>
+              <ul class="projectTags">
+                <li>Tag1</li>
+                <li>Tag2</li>
+                <li>Tag3</li>
+              </ul>
+            </div>
         </section>
+        <footer class="footerContact">
+            <ul>
+                <li class="social"><a href="https://github.com/danewrye">Github</a></li>
+                <li class="social"><a>|</a></li>
+                <li class="social"><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+                <li class="social"><a>|</a></li>
+                <li class="social"><a href="mailto:danew49@gmail.com">Email</a></li>
+            </ul>
+        </footer>
     </body>
+</html>
