set up foundation of projects html and js. Added to styles.css

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <li><a href=index.html>Landing</a></li>
             </ul>
         </header>
-        <section>
+        <section class="justifyCenter">
             <h3>Biography</h3>
             <p class="bio">Hello again! My name is Dane Wrye. I'm currently looking for a Summer 2021 internship within computer science and software engineering- if you have any interest, please contact me! With that out of the way, let me continue: I'm a computer science major from Reno, Nevada, and I study at the Georgia Institute of Technology, where I will be heading into my junior year!</p>
             <p class="bio">Within computer science, I have many interests. I'm fascinated by artificial intelligence, math, embedded computing, and internet of things, among others. I absolutely love to create: I spend lots of my time helping run The Hive, an ECE makerspace, and working on personal projects at the intersection of computer science and my personal interests. Things like scuba diving, backpacking, travel, language learning, football, lacrosse, coaching, lifting, and reading.</p>
