--- a/experience.html
+++ b/experience.html
@@ -56,7 +56,7 @@
                 <p class=description><br>Tutor guests on the use of The Hive's machines and technologies, including but certaintly not limited to 3d printing, laser cutting, and microcontrollers. Advise and guide guests on the creation of their own personal projects. </p>
             </div>
         </section>
-        <footer class=footerContact>
+        <footer class="footerContact experiencePage">
             <ul>
                 <li class="social"><a href="https://github.com/danewrye">Github</a></li>
                 <li class="social"><a>|</a></li>
