--- a/projects.html
+++ b/projects.html
@@ -19,19 +19,92 @@
             </ul>
         </header>
         <section>
-          <div class="projectCard">
-            <div class="projectImage">
-              <img src="images/rehearsal.png">
+          <div class="tagsWrapper">
+            <ul class="tags">
+              <li class="all" id="selected'">All</li>
+              <li class="software" id="unselected">Software</li>
+              <li class="hardware" id="unselected">Hardware</li>
+              <li class="design" id="unselected">Design</li>
+              <li class="front_end" id="unselected">Front-End</li>
+              <li class="algorithms" id="unselected">Algorithms</li>
+              <li class="machine_learning" id="unselected">Machine Learning</li>
+            </ul>
+          </div>
+
+          <div class="projectCard bmachine_learning">
+            <div class="projectImageContainer">
+              <img class="projectImage" src="images/rehearsal.png">
             </div>
             <div class="projectDescription">
-              <p class="projectTitle">Project 1</p>
+              <p class="projectTitle">CDC Malaria Algorithm</p>
               <p class="projectDescription">Description 1</p>
               <ul class="projectTags">
-                <li>Tag1</li>
-                <li>Tag2</li>
-                <li>Tag3</li>
+                <li class="software">Software</li>
+                <li class="design">Design</li>
+                <li class="front_end">Front-End</li>
+                <li class="algorithms">Algorithms</li>
               </ul>
             </div>
+          </div>
+
+          <div class="projectCard bfront_end">
+            <div class="projectDescription">
+              <p class="projectTitle">NFL Predictive Model</p>
+              <p class="projectDescription">Description 1</p>
+              <ul class="projectTags">
+                <li class="software">Software</li>
+                <li class="algorithms">Algorithms</li>
+                <li class="machine_learning">Machine Learning</li>
+              </ul>
+            </div>
+            <div class="projectImageContainer">
+              <img class="projectImage" src="images/rehearsal.png">
+            </div>
+          </div>
+
+          <div class="projectCard bdesign">
+            <div class="projectImageContainer">
+              <img class="projectImage" src="images/rehearsal.png">
+            </div>
+            <div class="projectDescription">
+              <p class="projectTitle">Raspberry Pi Automated Terrarium</p>
+              <p class="projectDescription">Description 1</p>
+              <ul class="projectTags">
+                <li class="software">Software</li>
+                <li class="hardware">Hardware</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="projectCard bhardware">
+            <div class="projectDescription">
+              <p class="projectTitle">Personal Portfolio Website</p>
+              <p class="projectDescription">Description 1</p>
+              <ul class="projectTags">
+                <li class="software">Software</li>
+                <li class="front_end">Front End</li>
+              </ul>
+            </div>
+            <div class="projectImageContainer">
+              <img class="projectImage" src="images/rehearsal.png">
+            </div>
+          </div>
+
+          <div class="projectCard balgorithms">
+            <div class="projectImageContainer">
+              <img class="projectImage" src="images/rehearsal.png">
+            </div>
+            <div class="projectDescription">
+              <p class="projectTitle">OOP Space Trader Clone</p>
+              <p class="projectDescription">Description 1</p>
+              <ul class="projectTags">
+                <li class="software">Software</li>
+                <li class="design">Design</li>
+                <li class="front_end">Front End</li>
+              </ul>
+            </div>
+          </div>
+
         </section>
         <footer class="footerContact">
             <ul>
