--- a/about.html
+++ b/about.html
@@ -13,17 +13,15 @@
         <header>
             <img class="mountains" src="images/mountains.png" alt="Mountain range image">
             <ul class="navigation">
-                <li class="selected"><a href=about.html>About</a></li>
+                <li class="selected"><a class="email" href=about.html>About</a></li>
                 <li><a href=experience.html>Experience</a></li>
                 <li><a href=projects.html>Projects</a></li>
                 <li><a href=index.html>Landing</a></li>
             </ul>
         </header>
         <section class="justifyCenter">
-            <h3>Biography</h3>
             <p class="bio">Hello again! My name is Dane Wrye. I'm currently looking for a Summer 2021 internship within computer science and software engineering- if you have any interest, please contact me! With that out of the way, let me continue: I'm a computer science major from Reno, Nevada, and I study at the Georgia Institute of Technology, where I will be heading into my junior year!</p>
-            <p class="bio">Within computer science, I have many interests. I'm fascinated by artificial intelligence, math, embedded computing, and internet of things, among others. I absolutely love to create: I spend lots of my time helping run The Hive, an ECE makerspace, and working on personal projects at the intersection of computer science and my personal interests. Things like scuba diving, backpacking, travel, language learning, football, lacrosse, coaching, lifting, and reading.</p>
-            <p class="bio">If you have a little more time, and want to get to know me a little bit better, check out the slideshow below!</p>
+            <p class="cs">Within computer science, I have many interests. I'm fascinated by artificial intelligence, math, embedded computing, and internet of things, among others. I absolutely love to create: I spend lots of my time helping run The Hive, an ECE makerspace, and working on personal projects at the intersection of computer science and my personal interests. Things like scuba diving, backpacking, travel, language learning, football, lacrosse, coaching, lifting, and reading.If you have a little more time, and want to get to know me a little bit better, check out the slideshow below!</p>
             <div class="slideShowContainer">
                 <div class="slideshowDiv">
                     <img class="slide" alt="Selected images of hobbies">
@@ -36,13 +34,13 @@
                 </div>
             </div>
         </section>
-        <footer class=footerContact>
+        <footer class="footerContact">
             <ul>
-                <li class="social"><a href="https://github.com/danewrye">Github</a></li>
-                <li class="social"><a>|</a></li>
-                <li class="social"><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
-                <li class="social"><a>|</a></li>
-                <li class="social"><a href="mailto:danew49@gmail.com">Email</a></li>
+                <li><a class="github" href="https://github.com/danewrye">Github</a></li>
+                <li class="break">|</li>
+                <li><a class="linkedin" href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+                <li class="break">|</li>
+                <li><a class="email" href="mailto:danew49@gmail.com">Email</a></li>
             </ul>
         </footer>
     </body>
