--- a/experience.html
+++ b/experience.html
@@ -14,15 +14,15 @@
             <img class="mountains" src="images/mountains.png" alt="Mountain range image">
             <ul class="navigation">
                 <li><a href=about.html>About</a></li>
-                <li class="selected"><a href=experience.html>Experience</a></li>
+                <li class="selected"><a class="linkedin" href=experience.html>Experience</a></li>
                 <li><a href=projects.html>Projects</a></li>
                 <li><a href=index.html>Landing</a></li>
             </ul>
         </header>
         <p class="hmu"> Is your company name missing from this section? Don't be a stranger! Reach out!</p>
         <section>
-            <h3>Professional</h3>
-            <div class="expCard even">
+            <h3 class="professional">Professional</h3>
+            <div class="expCard top left right">
                 <img class="logo" src="images/lm.jpg">
                 <p class=workplace>Lockheed Martin</p>
                 <p class=location>Fort Worth, TX</p>
@@ -30,7 +30,7 @@
                 <p class=date>05/2020-07/2020</p>
                 <p class=description><br>Delivered new software features in an agile environment. Contributed to build of CI/CD pipeline with Jenkins and Groovy. Helped redisign architecture of aforementioned Jenkins pipeline to increase modularity. Created various automation scripts with Python, Perl, and Batch: saved approximately 8-10 hours a week.</p>
             </div>
-            <div class="expCard odd">
+            <div class="expCard left right">
                 <img class="logo" src="images/rehearsal.png">
                 <p class=workplace>Rehearsal</p>
                 <p class=location>Reno, NV</p>
@@ -38,8 +38,8 @@
                 <p class=date>05/2019-08/2019</p>
                 <p class=description><br>Automated regression testing suite using Java and Selenium WebDriver, saving around 6 hours per test suite run. Created new tests with JUnit to expand coverage, catching new bugs.</p>
             </div>
-            <h3>Community</h3>
-            <div class="expCard even">
+            <h3 class="community">Community</h3>
+            <div class="expCard left right">
                 <img class="logo" src="images/hive.png">
                 <p class=workplace>The Hive Makerspace</p>
                 <p class=location>Atlanta, GA</p>
@@ -47,7 +47,7 @@
                 <p class=date>06/2019-Current</p>
                 <p class=description><br>Directly oversee The Hive's outreach committee, leading discussion and formation of policy and events. Work with community K-12 educators to deliver informational talks and workshops. Spearhead joint makerspace efforts on Georgia Tech campus. Act as a liason between The Hive and corporate sponsors to bring events to the Georgia Tech.</p>
             </div>
-            <div class="expCard odd">
+            <div class="expCard left right bottom">
                 <img class="logo" src="images/hive.png">
                 <p class=workplace>The Hive Makerspace</p>
                 <p class=location>Atlanta, GA</p>
@@ -58,11 +58,11 @@
         </section>
         <footer class="footerContact experiencePage">
             <ul>
-                <li class="social"><a href="https://github.com/danewrye">Github</a></li>
-                <li class="social"><a>|</a></li>
-                <li class="social"><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
-                <li class="social"><a>|</a></li>
-                <li class="social"><a href="mailto:danew49@gmail.com">Email</a></li>
+                <li><a class="github" href="https://github.com/danewrye">Github</a></li>
+                <li class="break">|</li>
+                <li><a class="linkedin" href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+                <li class="break">|</li>
+                <li><a class="email" href="mailto:danew49@gmail.com">Email</a></li>
             </ul>
         </footer>
     </body>
