--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Dane Wrye">
         <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
         <link href="styles/style.css" rel="stylesheet">
+        <script src="scripts/projects.js" defer></script>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
     <body>
@@ -14,11 +15,14 @@
             <ul class="navigation">
                 <li><a href=about.html>About</a></li>
                 <li><a href=experience.html>Experience</a></li>
-                <li class="selected"><a href=projects.html>Projects</a></li>
+                <li class="selected"><a class="github" href=projects.html>Projects</a></li>
                 <li><a href=index.html>Landing</a></li>
             </ul>
         </header>
         <section>
+
+          <!--
+
           <div class="tagsWrapper">
             <ul class="tags">
               <li class="all" id="selected'">All</li>
@@ -30,14 +34,17 @@
               <li class="machine_learning" id="unselected">Machine Learning</li>
             </ul>
           </div>
+          -->
 
-          <div class="projectCard bmachine_learning">
+          <!-- <h3>Selected Projects</h3> -->
+
+          <div class="projectCard">
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/rehearsal.png">
+              <img class="projectImage" src="images/cdc.png">
             </div>
             <div class="projectDescription">
-              <p class="projectTitle">CDC Malaria Algorithm</p>
-              <p class="projectDescription">Description 1</p>
+              <p class="projectTitle">Anti-Malarial Algorithm Application</p>
+              <p class="projectText">A junior design project in collaboration with the CDC, on work based around the algorithm detailed <a class="malariaLink" href="https://aac.asm.org/content/59/10/6096.short">here</a>. Created software engineering documents like minimum viable product and paper and digital prototypes. Re-implement and speed up the malarial classification algorithm. Create a front end accessible to a multilingual community. Create a database to store important malaria data.</p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="design">Design</li>
@@ -47,10 +54,10 @@
             </div>
           </div>
 
-          <div class="projectCard bfront_end">
+          <div class="projectCard">
             <div class="projectDescription">
               <p class="projectTitle">NFL Predictive Model</p>
-              <p class="projectDescription">Description 1</p>
+              <p class="projectText">Use machine learning techniques to predict, in a given NFL game, which team will emerge victorious. Implement aforementioned machine learning techniques with Python and PyTorch. Compile and organize NFL related data for processing. Evaluate what data will prove useful, and what will not to the stated means.</p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="algorithms">Algorithms</li>
@@ -58,17 +65,17 @@
               </ul>
             </div>
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/rehearsal.png">
+              <img class="projectImage" src="images/nfl.jpg">
             </div>
           </div>
 
-          <div class="projectCard bdesign">
+          <div class="projectCard">
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/rehearsal.png">
+              <img class="projectImage" src="images/piController.jpg">
             </div>
             <div class="projectDescription">
               <p class="projectTitle">Raspberry Pi Automated Terrarium</p>
-              <p class="projectDescription">Description 1</p>
+              <p class="projectText">Used Python, Raspberry Pi, and some basic electrical engineering and computer science knowledge to create a aquarium/terrarium control unit. This unit automatically turns lights on/off with sunrise/sunset, displays important sensor information, and emails user to alert them if sensor readings fall out of predifined bounds. Lights, sensor bounds, sensor information, and user information can all be manipulated or viewed from a control panel with a gui. </p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="hardware">Hardware</li>
@@ -76,27 +83,27 @@
             </div>
           </div>
 
-          <div class="projectCard bhardware">
+          <div class="projectCard">
             <div class="projectDescription">
               <p class="projectTitle">Personal Portfolio Website</p>
-              <p class="projectDescription">Description 1</p>
+              <p class="projectText">This isn't too meta, is it? I used HTML, CSS, and Javascript to create a peronal portfolio that showcases my computer science related experience. No frameworks or libraries were used as I wanted to get a good handle on the basics. In addition to learning these vital web technologies, I also got a taste of front-end design, and all the planning and refinement that goes into it.</p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="front_end">Front End</li>
               </ul>
             </div>
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/rehearsal.png">
+              <img class="projectImage" src="images/website.png">
             </div>
           </div>
 
-          <div class="projectCard balgorithms">
+          <div class="projectCard">
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/rehearsal.png">
+              <img class="projectImage" src="images/spaceTrader.png">
             </div>
             <div class="projectDescription">
               <p class="projectTitle">OOP Space Trader Clone</p>
-              <p class="projectDescription">Description 1</p>
+              <p class="projectText">Used object oriented design, object oriented programming, python, flask, html, and css to create a playable game style after space trader. While I gained experience to several new technologies on this project, the primary focus was learning and employing good object oriented design practices.</p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="design">Design</li>
@@ -108,11 +115,11 @@
         </section>
         <footer class="footerContact">
             <ul>
-                <li class="social"><a href="https://github.com/danewrye">Github</a></li>
-                <li class="social"><a>|</a></li>
-                <li class="social"><a href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
-                <li class="social"><a>|</a></li>
-                <li class="social"><a href="mailto:danew49@gmail.com">Email</a></li>
+                <li><a class="github" href="https://github.com/danewrye">Github</a></li>
+                <li class="break">|</li>
+                <li><a class="linkedin" href="https://www.linkedin.com/in/danewrye/">Linkedin</a></li>
+                <li class="break">|</li>
+                <li><a class="email" href="mailto:danew49@gmail.com">Email</a></li>
             </ul>
         </footer>
     </body>
