--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
     <head>
         <meta charset="utf-8">
         <title>Dane Wrye</title>
+        <link rel="icon" href="images/favicon.png">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <meta name="author" content="Dane Wrye">
         <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
-        <link href="styles/index.css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="styles/style.css" rel="stylesheet">
     </head>
-    <body>
-        <section>
-            <h1 class=>Hello, World!</h1>
-            <img class="selfPhoto" src="images/me.jpg" alt="A picture of Dane">
-            <ul class="navigation">
-                <li class="nav"><a href=about.html>About</a></li>
-                <li class="nav"><a href=experience.html>Experience</a></li>
-                <li class="nav"><a href=projects.html>Projects</a></li>
+    <body class="landing">
+            <h1>Hello, World!</h1>
+            <ul>
+                <li><a href=about.html>About</a></li>
+                <li><a href=experience.html>Experience</a></li>
+                <li><a href=projects.html>Projects</a></li>
             </ul>
             <ul class="contact">
                 <li class="social"><a href="https://github.com/danewrye"><img src="images/github.svg" alt="github"></a></li>
                 <li class="social"><a href="https://www.linkedin.com/in/danewrye/"><img src="images/linkedin.svg" alt="linkedin"></a></li>
                 <li class="social"><a href="mailto:danew49@gmail.com"><img src="images/gmail.svg" alt="gmail"></a></li>
             </ul>
-        </section>
+            <div class="inkWrapper">
+                <img class="ink" src="images/Dane_ink_portrait.png">
+            </div>
     </body>
 </html>
