--- a/experience.html
+++ b/experience.html
@@ -2,27 +2,31 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>Dane Wrye</title>
+        <title>Experience</title>
+        <link rel="icon" href="images/favicon.png">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <meta name="author" content="Dane Wrye">
         <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
         <link href="styles/style.css" rel="stylesheet">
-        <script src="scripts/experience.js" defer></script>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     </head>
     <body>
         <header>
+          <div class="mountainWrapper">
             <img class="mountains" src="images/mountains.png" alt="Mountain range image">
+          </div>
+          <div class="navigationWrapper">
             <ul class="navigation">
                 <li><a href=about.html>About</a></li>
                 <li class="selected"><a class="linkedin" href=experience.html>Experience</a></li>
                 <li><a href=projects.html>Projects</a></li>
                 <li><a href=index.html>Landing</a></li>
             </ul>
+          </div>
         </header>
         <p class="hmu"> Is your company name missing from this section? Don't be a stranger! Reach out!</p>
         <section>
             <h3 class="professional">Professional</h3>
-            <div class="expCard top left right">
+            <div class="expCard top right">
                 <img class="logo" src="images/lm.jpg">
                 <p class=workplace>Lockheed Martin</p>
                 <p class=location>Fort Worth, TX</p>
@@ -30,7 +34,7 @@
                 <p class=date>05/2020-07/2020</p>
                 <p class=description><br>Delivered new software features in an agile environment. Contributed to build of CI/CD pipeline with Jenkins and Groovy. Helped redisign architecture of aforementioned Jenkins pipeline to increase modularity. Created various automation scripts with Python, Perl, and Batch: saved approximately 8-10 hours a week.</p>
             </div>
-            <div class="expCard left right">
+            <div class="expCard top left">
                 <img class="logo" src="images/rehearsal.png">
                 <p class=workplace>Rehearsal</p>
                 <p class=location>Reno, NV</p>
@@ -39,7 +43,7 @@
                 <p class=description><br>Automated regression testing suite using Java and Selenium WebDriver, saving around 6 hours per test suite run. Created new tests with JUnit to expand coverage, catching new bugs.</p>
             </div>
             <h3 class="community">Community</h3>
-            <div class="expCard left right">
+            <div class="expCard top right">
                 <img class="logo" src="images/hive.png">
                 <p class=workplace>The Hive Makerspace</p>
                 <p class=location>Atlanta, GA</p>
@@ -47,7 +51,7 @@
                 <p class=date>06/2019-Current</p>
                 <p class=description><br>Directly oversee The Hive's outreach committee, leading discussion and formation of policy and events. Work with community K-12 educators to deliver informational talks and workshops. Spearhead joint makerspace efforts on Georgia Tech campus. Act as a liason between The Hive and corporate sponsors to bring events to the Georgia Tech.</p>
             </div>
-            <div class="expCard left right bottom">
+            <div class="expCard top left">
                 <img class="logo" src="images/hive.png">
                 <p class=workplace>The Hive Makerspace</p>
                 <p class=location>Atlanta, GA</p>
