--- a/projects.html
+++ b/projects.html
@@ -2,22 +2,27 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
-        <title>Dane Wrye</title>
+        <title>Projects</title>
+        <link rel="icon" href="images/favicon.png">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <meta name="author" content="Dane Wrye">
         <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
         <link href="styles/style.css" rel="stylesheet">
-        <script src="scripts/projects.js" defer></script>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <!--<script src="scripts/projects.js" defer></script>-->
     </head>
     <body>
         <header>
+          <div class="mountainWrapper">
             <img class="mountains" src="images/mountains.png" alt="Mountain range image">
+          </div>
+          <div class="navigationWrapper">
             <ul class="navigation">
                 <li><a href=about.html>About</a></li>
                 <li><a href=experience.html>Experience</a></li>
                 <li class="selected"><a class="github" href=projects.html>Projects</a></li>
                 <li><a href=index.html>Landing</a></li>
             </ul>
+          </div>
         </header>
         <section>
 
@@ -40,7 +45,7 @@
 
           <div class="projectCard">
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/cdc.png">
+              <img class="projectImage" src="images/cdc_square.png">
             </div>
             <div class="projectDescription">
               <p class="projectTitle">Anti-Malarial Algorithm Application</p>
@@ -65,13 +70,13 @@
               </ul>
             </div>
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/nfl.jpg">
+              <img class="projectImage" src="images/nfl_square.jpg">
             </div>
           </div>
 
           <div class="projectCard">
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/piController.jpg">
+              <img class="projectImage" src="images/piController_square.jpg">
             </div>
             <div class="projectDescription">
               <p class="projectTitle">Raspberry Pi Automated Terrarium</p>
@@ -93,13 +98,13 @@
               </ul>
             </div>
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/website.png">
+              <img class="projectImage" src="images/website_square.png">
             </div>
           </div>
 
           <div class="projectCard">
             <div class="projectImageContainer">
-              <img class="projectImage" src="images/spaceTrader.png">
+              <img class="projectImage" src="images/spaceTrader_square.png">
             </div>
             <div class="projectDescription">
               <p class="projectTitle">OOP Space Trader Clone</p>
