added favicon, small tweaks

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
                         <button class="previous">Previous</button>
                         <button class="next">Next</button>
                         <p class="descriptionTitle">Bio</p>
-                        <p class="description">From Reno, NV... Loves artificial intelligence, algorithms, math, internet of things, embedded computing, and all forms of making... Off the field enjoys reading, scuba diving, hiking, learning new languages, travel, lacrosse, and football. </p>
+                        <p class="description">From Reno, NV... Loves artificial intelligence, algorithms, math, internet of things, embedded computing, and all forms of making... Off the field enjoys reading, scuba diving, hiking, language learning, travel, lacrosse, and football. </p>
                     </div>
                 </div>
             </div>
