Remove html from url

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <body class="landing">
             <h1>Hello, World!</h1>
             <ul>
-                <li><a href=about.html>About</a></li>
-                <li><a href=experience.html>Experience</a></li>
-                <li><a href=projects.html>Projects</a></li>
+                <li><a href=about>About</a></li>
+                <li><a href=experience>Experience</a></li>
+                <li><a href=projects>Projects</a></li>
             </ul>
             <ul class="contact">
                 <li class="social"><a href="https://github.com/danewrye"><img src="images/github.svg" alt="github"></a></li>
