--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
           </div>
           <div class="navigationWrapper">
             <ul class="navigation">
-                <li class="selected"><a class="email" href=about.html>About</a></li>
-                <li><a href=experience.html>Experience</a></li>
-                <li><a href=projects.html>Projects</a></li>
-                <li><a href=index.html>Landing</a></li>
+                <li class="selected"><a class="email" href=about>About</a></li>
+                <li><a href=experience>Experience</a></li>
+                <li><a href=projects>Projects</a></li>
+                <li><a href=index>Landing</a></li>
             </ul>
           </div>
         </header>
