--- a/experience.html
+++ b/experience.html
@@ -16,10 +16,10 @@
           </div>
           <div class="navigationWrapper">
             <ul class="navigation">
-                <li><a href=about.html>About</a></li>
-                <li class="selected"><a class="linkedin" href=experience.html>Experience</a></li>
-                <li><a href=projects.html>Projects</a></li>
-                <li><a href=index.html>Landing</a></li>
+                <li><a href=about>About</a></li>
+                <li class="selected"><a class="linkedin" href=experience>Experience</a></li>
+                <li><a href=projects>Projects</a></li>
+                <li><a href=index>Landing</a></li>
             </ul>
           </div>
         </header>
