--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="icon" href="images/favicon.png">
         <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
         <meta name="author" content="Dane Wrye">
-        <meta name="description" content="A website portfolio do learn more about me, Dane Wrye.">
+        <meta name="description" content="A website portfolio to learn more about me, Dane Wrye.">
         <link href="styles/style.css" rel="stylesheet">
     </head>
     <body class="landing">
