update projects text

--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
           <div class="projectCard">
             <div class="projectDescription">
               <p class="projectTitle">NFL Predictive Model</p>
-              <p class="projectText">Use machine learning techniques to predict, in a given NFL game, which team will emerge victorious. Implement aforementioned machine learning techniques with Python and PyTorch. Compile and organize NFL related data for processing. Evaluate what data will prove useful, and what will not to the stated means.</p>
+              <p class="projectText">Use machine learning techniques to predict, in a given NFL game, which team will emerge victorious. Develop the machine learning model and implement it with Python and scikit-learn. Import, organize, and preprocess data with the help of pandas and numpy. Tune the model over time, to try to find the optimal solution.</p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="algorithms">Algorithms</li>
