--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                         <div class="listContainer">
                             <div class="sublist">
                                 <ul class="bullets free">
-                                    <li>Class: Junior</li>
+                                    <li>Class: Senior</li>
                                     <li>Hometown: Reno, Nv</li>
                                     <li>Major: Computer Science</li>
                                 </ul>
