--- a/experience.html
+++ b/experience.html
@@ -26,6 +26,14 @@
         <p class="hmu"> Is your company name missing from this section? Don't be a stranger! Reach out!</p>
         <section>
             <h3 class="professional">Professional</h3>
+            <div class="expCard top left">
+                <img class="logo" src="images/a2.png">
+                <p class=workplace>Amazon</p>
+                <p class=location>Seattle, WA</p>
+                <p class=title>Software Development Engineer Intern</p>
+                <p class=date>05/2021-08/2021</p>
+                <p class=description><br>This is an upcoming internship for summer 2021.</p>
+            </div>
             <div class="expCard top right">
                 <img class="logo" src="images/lm.jpg">
                 <p class=workplace>Lockheed Martin</p>
