--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
             </div>
             <div class="projectDescription">
               <p class="projectTitle">Anti-Malarial Algorithm Application</p>
-              <p class="projectText">A junior design project in collaboration with the CDC, on work based around the algorithm detailed <a class="malariaLink" href="https://aac.asm.org/content/59/10/6096.short">here</a>. Created software engineering documents like minimum viable product and paper and digital prototypes. Re-implement and speed up the malarial classification algorithm. Create a front end accessible to a multilingual community. Create a database to store important malaria data.</p>
+              <p class="projectText">A junior design project in collaboration with the CDC, on work based around the algorithm detailed <a class="malariaLink" href="https://aac.asm.org/content/59/10/6096.short">here</a>. Created and deployed web application with a React front end and Flask api. Ported existing code to Python and completely reorganized. Achieved a 10x speed up over original algorithm performance.</p>
               <ul class="projectTags">
                 <li class="software">Software</li>
                 <li class="design">Design</li>
