Amazon Internship Update

--- a/experience.html
+++ b/experience.html
@@ -31,8 +31,8 @@
                 <p class=workplace>Amazon</p>
                 <p class=location>Seattle, WA</p>
                 <p class=title>Software Development Engineer Intern</p>
-                <p class=date>05/2021-08/2021</p>
-                <p class=description><br>This is an upcoming internship for summer 2021.</p>
+                <p class=date>05/2021-07/2021</p>
+                <p class=description><br>Build out new pages with React, Redux, and JavaScript for AWS Device Farm Console, culminating in successful project launch. Reduced use of AWS API calls in Device Farm Console, creating a more efficient service. Wrote end-to-end (E2E) tests with WebDriverIO to prevent regression of fundamental functionality.</p>
             </div>
             <div class="expCard top right">
                 <img class="logo" src="images/lm.jpg">
